--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="box2">
-      <div>Check this shit out yo</div>
+      <div>Check this shit out yo!</div>
       <div class="items">
         <div>
           <img src="./images/" alt="stock photo">
