style added with CSS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="header">
-        <div>MY/SICK/ASS/LOGO</div>
+        <div class="logo">MY/SICK/ASS/LOGO</div>
         <ul>
          <li>header link uno</li>
          <li>header link dos</li>
@@ -20,45 +20,45 @@
 
     <div class="box1">
       <div class="left">
-        <div>Welcome to the best website of all time!</div>
-        <div>this website is cool asf, you are so lucky to know the url to be able to visit such a divine site</div>
+        <div class="bigguy">Welcome to the website of all time!</div>
+        <div class="littleguy">this website is cool asf, you are so lucky to know the url to be able to visit such a divine site</div>
         <button>Sign up</button>
       </div>
       <div class="right">
-        <img src="./images/" alt="stock photo">
+        <img class="bouncer" src="./images/bouncer.jpg" alt="stock photo">
       </div>
     </div>
 
     <div class="box2">
-      <div>Check this shit out yo!</div>
+      <div class="infohead">Check this shit out yo!</div>
       <div class="items">
         <div>
-          <img src="./images/" alt="stock photo">
-          <div>L</div>  
+          <img class="cell" src="./images/cell1.jpg" alt="stock photo">
+          <div class="mate">WHO</div>  
         </div>
         <div>
-          <img src="./images/" alt="stock photo">
-          <div>M</div>  
+          <img class="cell" src="./images/cell4.jpg" alt="stock photo">
+          <div class="mate">WAS</div>  
         </div>
         <div>
-          <img src="./images/" alt="stock photo">
-          <div>A</div>  
+          <img class="cell" src="./images/cell2.jpg" alt="stock photo">
+          <div class="mate">IN</div>  
         </div>
         <div>
-          <img src="./images/" alt="stock photo">
-          <div>O</div>  
+          <img class="cell" src="./images/cell3.jpg" alt="stock photo">
+          <div class="mate">PARIS</div>  
         </div>
       </div>  
     </div>
 
     <div class="box3">
-        <div class="quote">"I love you so much you mean the world to me!"</div>
+        <div class="quote">"I love you so much you mean the world to me! ksahdfkh hskdgfgasi ewoayfj fjlasdjfh chakhsd iuvhadsuii jckhasd uhdh ahdciuhh aciuh cahdiu"</div>
         <div class="wiseman">-your girl (a liar)</div>
     </div>
     
     <div class="box4">
       <div>
-        <div>Top bolded line goes here</div>
+        <div class="bigcall">Top bolded line goes here!</div>
         <div>the other less important text takes up this space right here yurr</div>
       </div>  
       <button>Pay me</button>
